Fix GPS Source visibility for Firefox
Partial fix for #35

--- a/django_publicdb/status_display/static/styles/station_page.css
+++ b/django_publicdb/status_display/static/styles/station_page.css
@@ -171,6 +171,7 @@ a.currentPage {
     margin-right: 2px;}
 
 #gpsMap {
+    clear: both;
     width: 585px;
     height: 250px;}
 
